tests/invalid_syntax/test_missing_semicolon.aphi
/*
Demonstrates: Invalid variable declaration (missing semicolon)
*/

int x
